[metadata]
name = Dxeon
description = Modern utilities for deep learning and machine learning pipelines
author = Rishik C. Mourya
author_email = braindotai@gmail.com
version = 0.1.0
license = MIT
license_file = LICENCE
platform = unix, linux, osx, cygwin, win32
classifiers = 
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
packages =
    dxeon
install_requires = 
    colorama>=0.4.4
    cycler>=0.10.0
    flatbuffers>=2.0
    kiwisolver>=1.3.2
    matplotlib>=3.4.3
    numpy>=1.21.2
    onnxruntime>=1.9.0
    opencv-python>=4.5.3.56
    Pillow>=8.3.2
    protobuf>=3.18.1
    pydot>=1.4.2
    pyparsing>=2.4.7
    python-dateutil>=2.8.2
    six>=1.16.0
    torch>=1.9
    torchvision>=0.10
    torchinfo>=1.5.3
    tqdm>=4.62.3
    typing-extensions>=3.10.0.2

python_requires = >=3.8
package_dir =
    =src
zip_safe = no

[options.extras_require]
testing =
    pytest>=6.0
    pytest-cov>=2.0
    mypy>=0.910
    flake8>=3.9
    tox>=3.24

[options.package_data]
slapping = py.typed

[flake8]
max-line-length = 180